ecmwf-user-dashboard/base/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-dashboard
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dashboard-api.example.com
    http:
      paths:
      - backend:
          service:
            name: api
            port: 
              number: 80
        path: /api-mount-point/(.*)
        pathType: ImplementationSpecific
  - host: user-dashboard.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port: 
              number: 3000
        path: /(frontend-mount-point.*)
        pathType: ImplementationSpecific
